# Aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  benchmark_tasks.json  install.ps1  install.sh  package.json  pyproject.toml  settings.example.yaml
.github/workflows/: publish.yml  test.yml
docs/: BENCHMARKS.md  TUNING.md
extensions/vscode/: package-lock.json  package.json
extensions/vscode/src/: extension.ts
sdk/: index.js
src/local_ide_agent/: __init__.py  bridge.py  config.py  main.py  sample_payloads.py  schemas.py
src/local_ide_agent/agent/: core.py  evaluator.py  llm.py  planner.py  policy.py  rewarding.py  trajectory_buffer.py
src/local_ide_agent/cli/: dashboard.py
src/local_ide_agent/connectors/: base.py  codex_bridge.py  ide.py  registry.py
src/local_ide_agent/deployment/: __init__.py  background.py
src/local_ide_agent/lab/: __init__.py  counterfactual.py  executor.py  mirofish_sim.py  synthpanel_sim.py
src/local_ide_agent/memory/: __init__.py  store.py
src/local_ide_agent/rl/: __init__.py  actions.py  attention.py  benchmark.py  curiosity.py  eval.py  n_step.py  nn.py  policy.py  replay.py  state.py  trainer.py
src/local_ide_agent/shadow/: __init__.py  workspace.py
src/local_ide_agent/training/: curriculum.py  dataset.py  environment.py  loop.py  research.py
tests/: conftest.py  test_cli.py  test_connectors.py  test_curiosity.py  test_curriculum.py  test_e2e_pipeline.py  test_environment.py  test_hybrid_rl.py  test_llm.py  test_memory.py  test_n_step.py  test_nn.py  test_policy.py  test_rnd_smoke.py
