[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-agent"
version = "0.3.0"
description = "A self-improving RL coding assistant that runs entirely on your machine. No API keys, no cloud, no subscriptions."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "planksconstant-arch", email = "planksconstant-arch@users.noreply.github.com"},
]
keywords = [
  "reinforcement-learning",
  "coding-assistant",
  "local-ai",
  "ide",
  "autonomous-agent",
  "actor-critic",
  "curiosity",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "litellm>=1.0.0",
]

[project.optional-dependencies]
models = [
  "sentence-transformers>=3.0",
  "onnxruntime>=1.18",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/planksconstant-arch/Aegis"
Repository = "https://github.com/planksconstant-arch/Aegis"
"Bug Tracker" = "https://github.com/planksconstant-arch/Aegis/issues"
Changelog = "https://github.com/planksconstant-arch/Aegis/blob/main/CHANGELOG.md"

[project.scripts]
aegis-agent = "local_ide_agent.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]
